<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addProductViewModel"
            type="com.gormal.gormalonetask.productDetails.viewmodel.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInpLayEnterProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEnterProductName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/product_name"
                android:maxLength="30"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInpLayEnterProductDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInpLayEnterProductName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEnterProductDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/product_description"
                android:maxLength="100"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInpLayEnterProductQuantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInpLayEnterProductDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEnterProductQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/product_quantity"
                android:maxLength="4"
                android:inputType="number"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInpLayEnterProductPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInpLayEnterProductQuantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEnterProductPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/product_price"
                android:maxLength="5"
                android:inputType="number"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInpLayEnterProductPrice" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>